--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
             <button type="button" class="btn btn-warning mt-2" onclick="startGame()">Reset</button>
         </div>
     </body>
-    <script src="tic_tac_toe.js"></script>
+    <script src="app.js"></script>
 </html>
